--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,8 @@
     "chrome://favicon/",
     "geolocation",
     "management",
-    "tabs"
+    "tabs",
+    "http://api.openweathermap.org/"
   ],
   "background": {
     "page": "background.html"
@@ -21,6 +22,6 @@
     "64": "icons/weather-64.png",
     "128": "icons/weather-128.png"
   },
-  "content_security_policy": "script-src 'self' https://api.wunderground.com https://encrypted.google.com; object-src 'self'",
+  "content_security_policy": "script-src 'self' https://encrypted.google.com; object-src 'self'",
   "manifest_version": 2
 }
